--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-server.port=9080
-spring.application.name=eureka
-eureka.client.service-url.defaultZone= http://localhost:${server.port}/eureka
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-
-spring.security.user.name=root
-spring.security.user.password=qwer1234
+spring.profiles.active=dev
 
