--- a/manage/src/main/resources/application.properties
+++ b/manage/src/main/resources/application.properties
@@ -1,15 +1,3 @@
-server.port=8001
-spring.application.name=manage
-spring.security.user.name=root
-spring.security.user.password=qwer1234
-
-eureka.client.service-url.defaultZone = http://${spring.security.user.name}:${spring.security.user.password}@localhost:9080/eureka
-
-#datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/leyou
-spring.datasource.username=root
-spring.datasource.password=Qwer123+
+spring.profiles.active=dev
 
 
-
-mybatis.mapper-locations=classpath:mapper/**/*.xml
