--- a/eureka/src/main/resources/application-prod.properties
+++ b/eureka/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=9080
 spring.application.name=eureka
-eureka.client.service-url.defaultZone= http://118.190.38.152:${server.port}/eureka
+eureka.client.service-url.defaultZone= http://localhost:${server.port}/eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
